# crabgo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-THIRD-PARTY  README.md  build.rs  clippy.toml  deny.toml  publish.py  triagebot.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tracking_issue.yml
.github/workflows/: audit.yml  main.yml
benches/: README.md
benches/benchsuite/: Cargo.toml
benches/benchsuite/benches/: resolve.rs  workspace_initialization.rs
benches/benchsuite/src/: lib.rs
benches/capture/src/: main.rs
benches/workspaces/: crabgo.tgz
ci/: fetch-smoke-test.sh  validate-man.sh
crates/crabgo-platform/: Cargo.toml
crates/crabgo-platform/examples/: matches.rs
crates/crabgo-platform/src/: lib.rs
crates/crabgo-platform/tests/: test_cfg.rs
crates/crabgo-test-macro/: Cargo.toml
crates/crabgo-test-macro/src/: lib.rs
crates/crabgo-test-support/: Cargo.toml  build.rs
crates/crabgo-test-support/src/: compare.rs  containers.rs  cross_compile.rs  diff.rs  git.rs  install.rs  lib.rs  paths.rs  publish.rs  registry.rs  tools.rs
crates/crabgo-util/: Cargo.toml
crates/crabgo-util/src/: lib.rs  paths.rs  process_builder.rs  registry.rs
crates/crates-io/: Cargo.toml  lib.rs
crates/home/: CHANGELOG.md  Cargo.toml  README.md
crates/home/src/: env.rs  lib.rs
crates/resolver-tests/: Cargo.toml
crates/resolver-tests/src/: lib.rs
crates/resolver-tests/tests/: resolve.rs
crates/semver-check/: Cargo.toml
crates/xtask-build-man/src/: main.rs
crates/xtask-stale-label/src/: main.rs
crates/xtask-unpublished/: Cargo.toml
crates/xtask-unpublished/src/: main.rs  xtask.rs
credential/: README.md
credential/crabgo-credential/: Cargo.toml  README.md
credential/crabgo-credential-1password/: Cargo.toml
credential/crabgo-credential-1password/src/: main.rs
credential/crabgo-credential-gnome-secret/: Cargo.toml
credential/crabgo-credential-gnome-secret/src/: main.rs
credential/crabgo-credential-macos-keychain/: Cargo.toml
credential/crabgo-credential-macos-keychain/src/: main.rs
credential/crabgo-credential-wincred/: Cargo.toml
credential/crabgo-credential-wincred/src/: main.rs
credential/crabgo-credential/src/: lib.rs
src/crabgo/: lib.rs  version.rs
src/crabgo/core/: dependency.rs  features.rs  manifest.rs  package.rs  package_id.rs  package_id_spec.rs  profiles.rs  registry.rs  shell.rs  summary.rs  workspace.rs
src/crabgo/ops/: common_for_install_and_uninstall.rs  crabgo_clean.rs  crabgo_config.rs  crabgo_doc.rs  crabgo_fetch.rs  crabgo_generate_lockfile.rs  crabgo_install.rs  crabgo_new.rs  crabgo_output_metadata.rs  crabgo_package.rs  crabgo_pkgid.rs  crabgo_read_manifest.rs  crabgo_remove.rs  crabgo_run.rs  crabgo_test.rs  crabgo_uninstall.rs  fix.rs  lockfile.rs  mod.rs  registry.rs  resolve.rs  vendor.rs
src/crabgo/sources/: config.rs  directory.rs  path.rs  replaced.rs
src/crabgo/util/: auth.rs  canonical_url.rs  command_prelude.rs  diagnostic_server.rs  errors.rs  flock.rs  important_paths.rs  interning.rs  into_url.rs  into_url_with_base.rs  job.rs  lockserver.rs  mod.rs  profile.rs  progress.rs  restricted_names.rs  rustc.rs  to_semver.rs  vcs.rs  workspace.rs
src/doc/: README.md  book.toml
src/doc/contrib/: README.md  book.toml
src/doc/man/: crabgo-add.md  crabgo-bench.md  crabgo-build.md  crabgo-check.md  crabgo-clean.md  crabgo-doc.md  crabgo-fetch.md  crabgo-fix.md  crabgo-generate-lockfile.md  crabgo-help.md  crabgo-init.md  crabgo-install.md  crabgo-locate-project.md  crabgo-login.md  crabgo-logout.md  crabgo-metadata.md  crabgo-new.md  crabgo-owner.md  crabgo-package.md  crabgo-pkgid.md  crabgo-publish.md  crabgo-remove.md  crabgo-report.md  crabgo-run.md  crabgo-rustc.md  crabgo-rustdoc.md  crabgo-search.md  crabgo-test.md  crabgo-tree.md  crabgo-uninstall.md  (+6 more)
src/etc/: _crabgo  crabgo.bashcomp.sh
tests/: internal.rs
tests/build-std/: main.rs
tests/testsuite/: advanced_env.rs  alt_registry.rs  artifact_dep.rs  bad_config.rs  bad_manifest_path.rs  bench.rs  binary_name.rs  build.rs  build_plan.rs  build_script.rs  build_script_env.rs  build_script_extra_link_arg.rs  cache_messages.rs  cfg.rs  check.rs  check_cfg.rs  clean.rs  collisions.rs  concurrent.rs  config.rs  config_cli.rs  config_include.rs  corrupt_git.rs  crabgo_alias_config.rs  crabgo_command.rs  crabgo_config.rs  crabgo_env_config.rs  crabgo_features.rs  crabgo_targets.rs  credential_process.rs  cross_compile.rs  cross_publish.rs  custom_target.rs  death.rs  dep_info.rs  direct_minimal_versions.rs  directory.rs  doc.rs  docscrape.rs  edition.rs  (+92 more)
(+444 files in other folders)
