[package]
name = "benchsuite"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-lang/crabgo"
repository = "https://github.com/rust-lang/crabgo"
description = "Benchmarking suite for Crabgo."
publish = false

[dependencies]
crabgo.workspace = true
criterion.workspace = true
flate2.workspace = true
tar.workspace = true
url.workspace = true

[lib]
bench = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "workspace_initialization"
harness = false
