[package]
name = "crabgo-platform"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-lang/crabgo"
repository = "https://github.com/rust-lang/crabgo"
documentation = "https://docs.rs/crabgo-platform"
description = "Crabgo's representation of a target platform."

[dependencies]
serde.workspace = true
