[package]
name = "crabgo-test-macro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-lang/crabgo"
repository = "https://github.com/rust-lang/crabgo"
documentation = "https://github.com/rust-lang/crabgo"
description = "Helper proc-macro for Crabgo's testsuite."

[lib]
proc-macro = true
