[package]
name = "crabgo-util"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-lang/crabgo"
repository = "https://github.com/rust-lang/crabgo"
description = "Miscellaneous support code used by Crabgo."

[dependencies]
anyhow.workspace = true
sha2.workspace = true
filetime.workspace = true
hex.workspace = true
jobserver.workspace = true
libc.workspace = true
log.workspace = true
same-file.workspace = true
shell-escape.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true

[target.'cfg(windows)'.dependencies]
miow.workspace = true
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Console"] }
