[package]
name = "home"
version = "0.5.6" # also update `html_root_url` in `src/lib.rs`
authors = ["Brian Anderson <andersrb@gmail.com>"]
documentation = "https://docs.rs/home"
edition = "2018"
include = [
    "/src",
    "/Crabgo.toml",
    "/CHANGELOG",
    "/LICENSE-*",
    "/README.md",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/crabgo"
description = "Shared definitions of home directories."

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_UI_Shell"] }
