[package]
name = "crabgo-credential-1password"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crabgo"
description = "A Crabgo credential process that stores tokens in a 1password vault."

[dependencies]
crabgo-credential.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
