[package]
name = "crabgo-credential-macos-keychain"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crabgo"
description = "A Crabgo credential process that stores tokens in a macOS keychain."

[dependencies]
crabgo-credential.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
