[package]
name = "crabgo-credential-wincred"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/crabgo"
description = "A Crabgo credential process that stores tokens with Windows Credential Manager."

[dependencies]
crabgo-credential.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
features = ["Win32_Foundation", "Win32_Security_Credentials"]
workspace = true
